# parallelized-heat-propagation

./: .gitignore  CMakeLists.txt  README.md
include/: grid.hpp
src/: grid.cpp  main.cpp
